--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-explorer-frontend",
   "author": "solnishshka",
   "version": "0.1.0",
-  "homepage": "http://diploma.solnishshka.xyz/",
+  "homepage": "https://diploma.solnishshka.xyz/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
